Update portfolio with new features and README

--- a/src/components/logoWall.astro
+++ b/src/components/logoWall.astro
@@ -11,6 +11,8 @@ const technologies = [
   "kubernetes",
   "terraform",
   "githubActions",
+  "git",
+  "mysql",
   "nodejs",
   "typeScript",
   "vercel",
