--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -90,7 +90,7 @@ import LikeButton from "../React/LikeButton.tsx";
           <iframe
             title="Spotify"
             style="border-radius:12px; border:0;"
-            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&locale=en_US&view=list&t=0"
+            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&locale=en_US&view=list&t=0&show_playlist=true"
             class="w-full h-40"
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
             loading="lazy"></iframe>
