--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -90,8 +90,8 @@ import LikeButton from "../React/LikeButton.tsx";
           <iframe
             title="Spotify"
             style="border-radius:12px; border:0;"
-            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&t=0"
-            class="w-full h-48"
+            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&view=list&t=0"
+            class="w-full h-52"
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
             loading="lazy"></iframe>
           
