Force Spotify progress bar with sandbox and minimal params

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -91,9 +91,10 @@ import LikeButton from "../React/LikeButton.tsx";
             title="Spotify"
             style="border-radius:12px; border:0;"
             src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&view=list&t=0"
-            class="w-full h-56"
+            class="w-full h-80"
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy"></iframe>
+            loading="lazy"
+            sandbox="allow-scripts allow-same-origin allow-popups allow-forms"></iframe>
           
         </div>
       </div>
