Try to force Spotify progress bar for guest users
- Add all possible parameters to force full player
- Add sandbox permissions for better iframe support
- This is a Spotify limitation - may not work for guest users

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -90,11 +90,12 @@ import LikeButton from "../React/LikeButton.tsx";
           <iframe
             title="Spotify"
             style="border-radius:12px; border:0;"
-            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&view=list&t=0"
+            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&view=list&t=0&show_playlist=true&show_user=true&show_tracklist=true&show_artwork=true"
             class="w-full h-80"
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade"
+            sandbox="allow-scripts allow-same-origin allow-popups allow-forms allow-top-navigation"></iframe>
           
         </div>
       </div>
