Add Spotify Developer App Client ID
- Use Client ID: 1536003d1c914fe6b08990204b2c2cad
- This should provide better embed control
- May help with guest user progress bar visibility
- Uses official Spotify Developer App credentials

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -90,7 +90,7 @@ import LikeButton from "../React/LikeButton.tsx";
           <iframe
             title="Spotify"
             style="border-radius:12px; border:0;"
-            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=generator&theme=0&view=list&t=0&show_playlist=true&show_user=true&show_tracklist=true&show_artwork=true"
+            src="https://open.spotify.com/embed/playlist/1AHht24vN47Fo7dDur9xoY?utm_source=spotify&theme=0&view=list&t=0&show_playlist=true&show_user=true&show_tracklist=true&show_artwork=true&client_id=1536003d1c914fe6b08990204b2c2cad"
             class="w-full h-80"
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
             loading="lazy"
