--- a/src/components/home.astro
+++ b/src/components/home.astro
@@ -16,10 +16,10 @@ import SkillsList from "../React/SkillsList.tsx";
         <h1
           class="text-[var(--white)] text-5xl md:text-6xl font-medium text-pretty leading-tight pb-1 shiny-sec"
         >
-          Cloud <br /> Engineer
+          Cloud & DevOps<br /> Engineer
         </h1>
         <p class="text-md md:text-2xl text-[var(--white-icon)]">
-          Aspiring Cloud Engineer with expertise in AWS cloud services, serverless architecture, 
+          Aspiring Cloud & DevOps Engineer with expertise in AWS cloud services, CI/CD pipelines, 
           Docker, Kubernetes, and modern web technologies. Transforming ideas into scalable 
           cloud solutions with cutting-edge cloud development.
         </p>
