contribution graph added

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from "@/layouts/Layout.astro";
 import Nav from "@/components/nav.astro";
 import Home from "@/components/home.astro";
+import GithubContributions from "@/components/githubContributions.astro";
 import Projects from "@/components/projects.astro";
 import Certifications from "@/components/certifications.astro";
 import Contact from "@/components/contact.astro";
@@ -11,6 +12,7 @@ import Footer from "@/components/footer.astro";
 <Layout title="Charan Chaitanya Devanaboyina">
   <Nav />
   <Home />
+  <GithubContributions />
   <Projects />
   <Certifications />
   <Contact />
